Revert "Bug 1091719 - When setting a new alarm the header text is not centered" for test failures
This reverts commit 9e7fb692195d7fdf820eaa99f6e76c57830b34eb.

--- a/apps/clock/style/alarm.css
+++ b/apps/clock/style/alarm.css
@@ -83,18 +83,14 @@ ul.compact li label:active {
  * change when we get `:host` and `:content` selectors
  * in shadow-dom.
  */
-
-section[role="region"] > gaia-header h1.edit-alarm-title {
-  display: block !important; /* 1 */
-}
 section[role="region"] > gaia-header h1.new-alarm-title {
   display: none !important; /* 1 */
 }
+section[role="region"].new > gaia-header h1.new-alarm-title {
+  display: flex !important; /* 1 */
+}
 section[role="region"].new > gaia-header h1.edit-alarm-title {
   display: none !important; /* 1 */
-}
-section[role="region"].new > gaia-header h1.new-alarm-title {
-  display: block !important; /* 1 */
 }
 
 /* ----------- Alarm List ---------- */
@@ -312,7 +308,7 @@ html[dir=rtl] #alarms .alarmEnable {
 html[dir=rtl] a.alarm-item > .time {
   left: auto;
   right: 1.7rem;
-
+  
 }
 html[dir=rtl] a.alarm-item > .label {
   left: 4.5rem;
@@ -323,7 +319,7 @@ html[dir=rtl] a.alarm-item > .repeat {
   right: 1.7rem;
 }
 html[dir=rtl] a.alarm-item > .repeat {
-  left: auto;
+  left: auto;  
   right: 1.7rem;
 }
 html[dir=rtl] #alarms .alarmEnable input[type="checkbox"] + span {
